2008-11-02  Jesse Jones  <jesjones@mindspring.com>

	* InstructionRocks.cs: Fixed TraceBack so that it only goes back
	if the stack is non empty (the old code had problems with nullary
	static methods for example).

2008-11-02  Sebastien Pouliot  <sebastien@ximian.com>

	* ModuleRocks.cs: Add a catch-all since we can't catch the
	MonoSymbolFileException throw for earlier version of the MDB
	debugging symbols.

2008-10-26  Sebastien Pouliot  <sebastien@ximian.com>

	* CommonRocks.cs: Add Version.IsEmpty() rock

2008-10-25  Cedric Vivier <cedricv@neonux.com>

	* TypeRocks.cs: Make Implements() look at parent interfaces too.
	This avoid false negatives on assemblies generated by compilers
	which do not explicitely list interfaces implemented by inheritance
	(such as booc).

2008-10-12  Sebastien Pouliot  <sebastien@ximian.com>

	* InstructionRocks.cs: Simplify GetField by using OperandType.
	Simplify getting a FieldType in GetOperandType since there is no
	need to resolve the field into a FieldDefinition.

2008-10-11  Sebastien Pouliot  <sebastien@ximian.com> 

	* InstructionRocks.cs: Handle 'this' correctly in GetOperandType 
	rock. Add new rock to check for an operand loading the constant zero.

2008-10-11  Sebastien Pouliot  <sebastien@ximian.com>

	* InstructionRocks.cs: Add GetOperandType rock to be able, quickly,
	to determine on which type an instruction works.

2008-10-05  Sebastien Pouliot  <sebastien@ximian.com>

	* MethodRocks.cs: Add IsOverride rock.

2008-08-28  Sebastien Pouliot  <sebastien@ximian.com>

	* InstructionRocks.cs: Simplify some rocks (Is*) by using the new
	OpCodeBitmask helper class.

2008-08-27  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyRocks.cs: Remove HasAttribute
	* CustomAttributeRocks.cs: Add HasAttribute extension method on 
	ICustomAttributeProvider
	* FieldRocks.cs: Remove HasAttribute
	* MethodRocks.cs: Remove HasAttribute
	* TypeRocks.cs: Remove HasAttribute

2008-08-26  Sebastien Pouliot  <sebastien@ximian.com> 
