@@ -1,3 +1,7 @@
+2008-11-08  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* MethodRocks.cs: Fix IsEventCallback to work with generic TEventArgs
+
 2008-11-02  Jesse Jones  <jesjones@mindspring.com>
 
 	* InstructionRocks.cs: Fixed TraceBack so that it only goes back
